skiplang/compiler/invalid_tests/typechecking/unbound_field_non_static.sk
base class X{} {
  static fun f(): void {
    void
  }
}

fun main(): void {
  X::f(); // correct
  X.f(); // common mistake
}
